// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Only token authentication is supported",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - non positive integer 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_total must be a positive integer",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - out of range 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_id must be between 1 and 2",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "GitLab authentication failed. Please check your API token and permissions: Response code 401 (Unauthorized)",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index round robin bucket execution 1`] = `
{
  "__bucket_execution_state": {
    "last_executed_bucket_id": 2,
  },
}
`;

exports[`index streams - faros commits 1`] = `
[
  {
    "author_email": "john.doe@example.com",
    "author_name": "John Doe",
    "authored_date": "2024-01-15T10:25:00Z",
    "committed_date": "2024-01-15T10:30:00Z",
    "committer_email": "john.doe@example.com",
    "committer_name": "John Doe",
    "created_at": "2024-01-15T10:30:00Z",
    "group_id": "1",
    "id": "abc123def456ghi789jkl012mno345pqr678stu",
    "message": "Add new feature for user authentication

This commit implements OAuth2 integration for better security.",
    "parent_ids": [
      "def456ghi789jkl012mno345pqr678stu901vwx",
    ],
    "project_path": "test-project",
    "short_id": "abc123de",
    "title": "Add new feature for user authentication",
    "web_url": "https://gitlab.com/test-group/test-project/-/commit/abc123def456ghi789jkl012mno345pqr678stu",
  },
  {
    "author_email": "jane.smith@example.com",
    "author_name": "Jane Smith",
    "authored_date": "2024-01-14T14:15:00Z",
    "committed_date": "2024-01-14T14:20:00Z",
    "committer_email": "jane.smith@example.com",
    "committer_name": "Jane Smith",
    "created_at": "2024-01-14T14:20:00Z",
    "group_id": "1",
    "id": "def456ghi789jkl012mno345pqr678stu901vwx",
    "message": "Fix bug in payment processing

Resolves issue where transactions were not properly validated.",
    "parent_ids": [
      "ghi789jkl012mno345pqr678stu901vwx234yz",
    ],
    "project_path": "test-project",
    "short_id": "def456gh",
    "title": "Fix bug in payment processing",
    "web_url": "https://gitlab.com/test-group/test-project/-/commit/def456ghi789jkl012mno345pqr678stu901vwx",
  },
]
`;

exports[`index streams - faros commits with state 1`] = `
[
  {
    "author_email": "john.doe@example.com",
    "author_name": "John Doe",
    "authored_date": "2024-01-15T10:25:00Z",
    "branch": "main",
    "committed_date": "2024-01-15T10:30:00Z",
    "committer_email": "john.doe@example.com",
    "committer_name": "John Doe",
    "created_at": "2024-01-15T10:30:00Z",
    "group": "test-group",
    "group_id": "1",
    "id": "abc123def456ghi789jkl012mno345pqr678stu",
    "message": "Add new feature for user authentication

This commit implements OAuth2 integration for better security.",
    "parent_ids": [
      "def456ghi789jkl012mno345pqr678stu901vwx",
    ],
    "project": "test-group/test-project",
    "project_path": "test-project",
    "short_id": "abc123de",
    "title": "Add new feature for user authentication",
    "web_url": "https://gitlab.com/test-group/test-project/-/commit/abc123def456ghi789jkl012mno345pqr678stu",
  },
  {
    "author_email": "jane.smith@example.com",
    "author_name": "Jane Smith",
    "authored_date": "2024-01-14T14:15:00Z",
    "branch": "main",
    "committed_date": "2024-01-14T14:20:00Z",
    "committer_email": "jane.smith@example.com",
    "committer_name": "Jane Smith",
    "created_at": "2024-01-14T14:20:00Z",
    "group": "test-group",
    "group_id": "1",
    "id": "def456ghi789jkl012mno345pqr678stu901vwx",
    "message": "Fix bug in payment processing

Resolves issue where transactions were not properly validated.",
    "parent_ids": [
      "ghi789jkl012mno345pqr678stu901vwx234yz",
    ],
    "project": "test-group/test-project",
    "project_path": "test-project",
    "short_id": "def456gh",
    "title": "Fix bug in payment processing",
    "web_url": "https://gitlab.com/test-group/test-project/-/commit/def456ghi789jkl012mno345pqr678stu901vwx",
  },
]
`;

exports[`index streams - faros commits with state 2`] = `
{
  "faros_commits": {
    "1/test-group/test-project": {
      "cutoff": 1705314600000,
    },
  },
}
`;

exports[`index streams - faros groups 1`] = `
[
  {
    "created_at": "2021-01-01T00:00:00Z",
    "description": "Test group description",
    "id": "1",
    "name": "Test Group",
    "parent_id": null,
    "path": "test-group",
    "updated_at": "2021-01-01T00:00:00Z",
    "visibility": "public",
    "web_url": "https://gitlab.com/test-group",
  },
]
`;

exports[`index streams - faros issues 1`] = `
[
  {
    "assignees": [
      {
        "username": "hkmshb",
      },
    ],
    "author": {
      "username": "hkmshb",
    },
    "created_at": "2021-02-27T15:50:47.923Z",
    "description": "The repository needs to be set up.",
    "group_id": "1",
    "id": 79927767,
    "labels": [
      "Enhancement",
      "Project Setup",
    ],
    "project_path": "test-project",
    "state": "opened",
    "title": "Setup Required!",
    "updated_at": "2021-03-02T15:38:01.088Z",
  },
  {
    "assignees": [],
    "author": {
      "username": "hkmshb",
    },
    "created_at": "2021-03-02T15:35:31.706Z",
    "description": "The README.md file is to spare. Add more contents.",
    "group_id": "1",
    "id": 80103938,
    "labels": [
      "Enhancement",
    ],
    "project_path": "test-project",
    "state": "opened",
    "title": "Update README file",
    "updated_at": "2021-03-02T15:37:42.090Z",
  },
]
`;

exports[`index streams - faros projects 1`] = `
[
  {
    "archived": false,
    "created_at": "2021-01-01T00:00:00Z",
    "default_branch": "main",
    "description": "Test project description",
    "group_id": "1",
    "id": "123",
    "name": "Test Project",
    "namespace": {
      "full_path": "test-group",
      "id": "1",
      "kind": "group",
      "name": "Test Group",
      "path": "test-group",
    },
    "path": "test-project",
    "path_with_namespace": "test-group/test-project",
    "syncRepoData": true,
    "updated_at": "2021-06-01T00:00:00Z",
    "visibility": "public",
    "web_url": "https://gitlab.com/test-group/test-project",
  },
]
`;

exports[`index streams - faros tags 1`] = `
[
  {
    "commit_id": "abc123def456",
    "group_id": "1",
    "name": "v1.0.0",
    "project_path": "test-project",
    "title": "Release version 1.0.0",
  },
  {
    "commit_id": "def456abc789",
    "group_id": "1",
    "name": "v0.9.0",
    "project_path": "test-project",
    "title": "Pre-release version 0.9.0",
  },
]
`;

exports[`index streams - faros users 1`] = `
[
  {
    "created_at": "2021-01-01T00:00:00Z",
    "email": "user1@example.com",
    "group_id": "1",
    "id": 1,
    "name": "Test User 1",
    "state": "active",
    "updated_at": "2021-01-01T00:00:00Z",
    "username": "user1",
    "web_url": "https://gitlab.com/user1",
  },
  {
    "created_at": "2021-02-01T00:00:00Z",
    "email": "user2@example.com",
    "group_id": "1",
    "id": 2,
    "name": "Test User 2",
    "state": "active",
    "updated_at": "2021-02-01T00:00:00Z",
    "username": "user2",
    "web_url": "https://gitlab.com/user2",
  },
]
`;
